# proyecto_uni

./: README.md  main.spec  pyproject.toml
src/product_app/: main.py  products.csv
