[project]
name = "product-app"
version = "0.1.0"
description = ""
authors = [
    {name = "marcelojgm",email = "marcelogm2042@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "product_app", from = "src"}]


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.12.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
